# template-windows_cpp

./: CMakeLists.txt  Matrix.h  Mesh.h  Object.h  Shape.h  Window.h  main.cpp  shaderClass.cpp  shaderClass.h
glad/: CMakeLists.txt
glad/include/glad/: gl.h
shaders/: point.frag  point.vert
src/: ArcBall.cpp  ArcBall.h  CMakeLists.txt  Geometry.cpp  Geometry.h  Matrix.cpp  Matrix.h  Object.cpp  Object.h  Shape.h  shaderClass.cpp  shaderClass.h
